fix hero text and logo alignment

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,16 +1,22 @@
 .large-hero{
   border-bottom:.125rem solid $mainGreen;
   position: relative;
-    max-height: 25rem;
+    height: 15rem;
     overflow: hidden;
+    width:100%;
 
     @mixin atSmall{
-         max-height: 25rem;
+         height: 20rem;
     }  
     
-     @mixin atSmall{
-         max-height: 43.75rem;
-    } 
+    @mixin atMedium{
+        height: 30rem;
+    }
+    
+    @mixin atLarge{
+        height:40rem;
+    }
+   
   &__container{
       padding-top:5.5rem;
       position: absolute;
@@ -18,7 +24,6 @@
       right:0;
       bottom:0;
       left: 0;
-      width:1920px;
       background:url('../../assets/images/dot.png') rgba(18, 50, 65,.6);
       
       @mixin atMedium{
@@ -26,8 +31,6 @@
       }
       
       &__text-content{
-            width: 20rem;
-            position: absolute;
             top:51%;
             left:2%;
           
@@ -37,14 +40,17 @@
           }
           
           @mixin atMedium{
-             width: 90rem;
-            top:50%;
-              transform: translate(-15%, -50%);
+           margin: auto 5%;
+             
               
           }
           
           @mixin atLarge{
-                width: 90rem;
+            width:1120px;
+            position: absolute;
+            left:50%;
+            transform: translateX(-50%);
+            top:40%;
           }
           
         &__logo {
@@ -63,42 +69,42 @@
                 float:left;
                 border-right:.125rem solid $mainGreen;
                 padding-right:2.1875rem;
+                margin-right:20px;
                 display: block;
               
             }
         }
 
-      &__title{
-            color:#fff;
-            font-size:1rem;
-          text-align: center;
-          
-          @mixin atSmall {
-              width:30rem;
-              text-align: center;
-              font-size:2rem;
-              
-          }
-         
-          @mixin atMedium{
-              font-size:3rem;
-              font-weight: 100;
-              width:50rem;
-              left:30%;
-             
-          }
+    &__title{
+        color:#fff;
+        font-size:1rem;
+        text-align: center;
+        margin-top:8%;
+        padding:10px;
+        @mixin atSmall {
+            font-size:2rem;
 
-          @mixin atLarge{
-              margin:0 0 0 0;
-              font-weight:300;
-              text-align: left;
-              padding-left:2.1875rem;
-              float: left;
-              font-size: 3rem;
-              width:50rem;
-          }
+        }
 
-      }
+        @mixin atMedium{
+            font-size:2.5rem;
+            font-weight: 100;
+            margin-top:15%;
+            padding:0;
+
+        }
+
+        @mixin atLarge{
+            margin:0 0 0 0;
+            font-weight:300;
+            text-align: left;
+            padding-left:2rem;
+            font-size: 3rem;
+            width:700px;
+            float: left;
+        }
+
+    }
 
       &__sub-title{
         font-weight:300;
